--- a/website/content/docs/secrets/consul.mdx
+++ b/website/content/docs/secrets/consul.mdx
@@ -82,7 +82,8 @@ management tool.
     ```
 
 1.  Configure a role that maps a name in Vault to a Consul ACL policy. Depending on your Consul version,
-    you will either provide a policy document and a token_type, or a set of policies.
+    you will either provide a policy document and a token_type, a list of policies or roles, or a set of
+    service or node identities.
     When users generate credentials, they are generated against this role.
 
     For Consul versions below 1.4, the policy must be base64-encoded. The policy language is
