--- a/website/content/docs/platform/k8s/helm/configuration.mdx
+++ b/website/content/docs/platform/k8s/helm/configuration.mdx
@@ -785,7 +785,7 @@ and consider if they're appropriate for your deployment.
       }
 
       storage "consul" {
-          path = "vault"
+          path = "vault/"
           address = "HOST_IP:8500"
       }
     ```
