--- a/website/content/docs/platform/k8s/helm/run.mdx
+++ b/website/content/docs/platform/k8s/helm/run.mdx
@@ -335,8 +335,8 @@ server:
       }
 
       storage "consul" {
-        path = "vault"
         address = "HOST_IP:8500"
+        path = "vault/"
       }
 ```
 
