--- a/website/content/docs/concepts/client-count/faq.mdx
+++ b/website/content/docs/concepts/client-count/faq.mdx
@@ -4,7 +4,7 @@ page_title: FAQ
 description: An FAQ page to answer the most commonly asked questions about client count.
 ---
 
-# Frequently Asked Questions (FAQ)
+# Client Count FAQ
 
 This FAQ section contains frequently asked questions about the client count feature.
 
