--- a/website/content/api-docs/system/mfa/index.mdx
+++ b/website/content/api-docs/system/mfa/index.mdx
@@ -10,7 +10,7 @@ description: >-
 
 ~> **Enterprise Only** – These endpoints require Vault Enterprise.
 
-## Supported MFA types.
+## Supported MFA types
 
 - [TOTP](/api/system/mfa/totp)
 
