--- a/website/content/docs/enterprise/mfa/index.mdx
+++ b/website/content/docs/enterprise/mfa/index.mdx
@@ -6,7 +6,7 @@ description: >-
   different authentication types.
 ---
 
-# Vault Enterprise MFA Support
+# Vault Step-up Enterprise MFA Support
 
 -> **Note**: This feature requires [Vault Enterprise Plus](https://www.hashicorp.com/products/vault/).
 
