added content for Tranform FPE

--- a/website/content/docs/release-notes/1.10.mdx
+++ b/website/content/docs/release-notes/1.10.mdx
@@ -55,6 +55,8 @@ We now support a more streamlined method for managing [KV v2 secrets](/api-docs/
 
 ### Advanced I/O Handling for Tranform FPE
 
+Currently, you can use Tranform to securely encrpyt important data while preserving its format using a template. However, the current option exposes limitations by expecting the input to always be the same without consideration for requirements, such as formatting, prefixes, etc. We have now added two new fields `encode_format` and `decode_format` to the Create template page on the UI under Advanced templating. With the addtions of these two fields, more granular control can be acheived such as encoding only a portion of the data, regardless of input.
+
 ### DB2 Dynamic Secrets support
 
 Vault now supports credential management for IBM DB2. For more details, refer to the [IBM Db2 Credentials Management](https://learn.hashicorp.com//tutorials/vault/ibm-db2-openldap) tutorial.
