fixed spelling errors

--- a/website/content/docs/release-notes/1.10.mdx
+++ b/website/content/docs/release-notes/1.10.mdx
@@ -55,7 +55,7 @@ We now support a more streamlined method for managing [KV v2 secrets](/api-docs/
 
 ### Advanced I/O Handling for Tranform FPE
 
-Currently, you can use Tranform to securely encrpyt important data while preserving its format using a template. However, the current option exposes limitations by expecting the input to always be the same without consideration for requirements, such as formatting, prefixes, etc. We have now added two new fields `encode_format` and `decode_format` to the Create template page on the UI under Advanced templating. With the addtions of these two fields, more granular control can be acheived such as encoding only a portion of the data, regardless of input.
+Currently, you can use Transform to securely encrypt important data while preserving its format using a template. However, the current option exposes limitations by expecting the input to always be the same without consideration for requirements, such as formatting, prefixes, etc. We have now added two new fields `encode_format` and `decode_format` to the Create template page on the UI under Advanced templating. With the additions of these two fields, more granular control can be achieved such as encoding only a portion of the data, regardless of input.
 
 ### DB2 Dynamic Secrets support
 
