--- a/website/content/docs/auth/azure.mdx
+++ b/website/content/docs/auth/azure.mdx
@@ -180,7 +180,7 @@ method as an external plugin. The azure plugin method is integrated into Vault a
 a builtin method by default.
 
 Assuming you have saved the binary `vault-plugin-auth-azure` to some folder and
-configured the [plugin directory](/docs/internals/plugins#plugin-directory)
+configured the [plugin directory](/docs/plugins/plugin-architecture#plugin-directory)
 for your server at `path/to/plugins`:
 
 1. Enable the plugin in the catalog:
