--- a/website/content/docs/plugins/plugin-architecture.mdx
+++ b/website/content/docs/plugins/plugin-architecture.mdx
@@ -46,17 +46,17 @@ Vault.
 ## Plugin Communication
 
 Vault creates a mutually authenticated TLS connection for communication with the
-plugin's RPC server. While invoking the plugin process, Vault passes a [wrapping
-token](/docs/concepts/response-wrapping) to the
+plugin's RPC server. While invoking the plugin process, Vault passes a
+[wrapping token](/docs/concepts/response-wrapping) to the
 plugin process' environment. This token is single use and has a short TTL. Once
 unwrapped, it provides the plugin with a uniquely generated TLS certificate and
 private key for it to use to talk to the original Vault process.
 
-The `api_addr` must be set in order for the plugin process to
-establish communication with the Vault server during mount time. If the storage
-backend has HA enabled and supports automatic host address detection
-(e.g. Consul), Vault will automatically attempt to determine the `api_addr` as
-well.
+The [api_addr](/docs/configuration#api_addr) must be set in order for the
+plugin process to establish communication with the Vault server during mount
+time. If the storage backend has HA enabled and supports automatic host address
+detection (e.g. Consul), Vault will automatically attempt to determine the
+`api_addr` as well.
 
 ~> Note: Prior to Vault version 1.9.2, reading the original connection's TLS
 connection state is not supported in plugins.
@@ -124,7 +124,7 @@ the catalog, sending along the JWT formatted response wrapping token and mlock
 settings. Like Vault, plugins support [the use of mlock when available](/docs/configuration#disable_mlock).
 
 ~> Note: If Vault is configured with `mlock` enabled, then the Vault executable
-and each plugin executable in your [plugins directory](/docs/internals/plugins/plugin-architecture#plugin-directory)
+and each plugin executable in your [plugins directory](/docs/plugins/plugin-architecture#plugin-directory)
 must be given the ability to use the `mlock` syscall.
 
 ### Plugin Upgrades
