--- a/website/content/docs/plugins/plugin-portal.mdx
+++ b/website/content/docs/plugins/plugin-portal.mdx
@@ -7,10 +7,10 @@ description: A curated collection of official, partner, and community Vault plug
 # Plugin Portal
 
 This page contains a curated collection of official, partner, and community
-[Vault plugins](/docs/internals/plugins).
+[Vault plugins](/docs/plugins).
 
 For more information about plugin development, refer to this [documentation
-section](/docs/internals/plugins#plugin-development) and this [Learn
+section](/docs/plugins/plugin-development) and this [Learn
 Guide](https://learn.hashicorp.com/vault/developer/plugin-backends).
 
 ## Official
@@ -23,7 +23,7 @@ if necessary.
 If a plugin exists separately under its own repository, follow the instructions
 within that repository to develop, test, and build the plugin. If a repository
 exists within the Vault repository, the plugin can be built as instructed in
-[here](/docs/internals/plugins#built-in-plugins).
+[here](/docs/plugins#built-in-plugins).
 
 ### Auth
 
