--- a/website/content/docs/secrets/databases/custom.mdx
+++ b/website/content/docs/secrets/databases/custom.mdx
@@ -27,12 +27,12 @@ write your own code to generate credentials in any database you wish. It also
 allows databases that require dynamically linked libraries to be used as plugins
 while keeping Vault itself statically linked.
 
-Please read the [Plugins internals](/docs/internals/plugins) docs for more
+Please read the [Plugins internals](/docs/plugins) docs for more
 information about the plugin system before getting started building your
 Database plugin.
 
 Database plugins can be made to implement
-[plugin multiplexing](/docs/internals/plugins/plugin-architecture#plugin-multiplexing)
+[plugin multiplexing](/docs/plugins/plugin-architecture#plugin-multiplexing)
 which allows a single plugin process to be used for multiple database
 connections. To enable multiplexing, the plugin must be compiled with the
 `ServeMultiplex` function call from Vault's `dbplugin` package.
@@ -211,7 +211,7 @@ plugin. We also recommend if you are planning on distributing your plugin to
 build with [gox](https://github.com/mitchellh/gox) for cross platform builds.
 
 To use your plugin with the database secrets engine you need to place the binary in the
-plugin directory as specified in the [plugin internals](/docs/internals/plugins) docs.
+plugin directory as specified in the [plugin internals](/docs/plugins) docs.
 
 You should now be able to register your plugin into the vault catalog. To do
 this your token will need sudo permissions.
